--- a/index.css
+++ b/index.css
@@ -6,10 +6,8 @@ body {
 .box {
 	height: 30px;
 	width: 30px;
-	animation: makeFlag 2s ease 0ms 1 forwards alternate;
+    animation: move 2s ease-in-out 1s infinite alternate both;
 }
-
-
 
 .box-red {
 	background: #ff4d4d;
@@ -31,13 +29,6 @@ body {
     margin: 0;
 }
 
-
-@keyframes makeFlag {
-	100% {
-		transform: 
-			translate(50vw, 50vh)
-			scaleX(10)
-			skew(60deg)		
-	}
+@keyframes move {
+    to {transform: translate(50vw, 50vh) scaleX(10) skewY(60deg);}
 }
-
